[package]
name = "portix"
version = "0.1.0"
authors = ["stratact <stratact1@gmail.com>"]

[dependencies.gtk]
version = "0.4.0"
features = ["v3_22"]

[dependencies.rusqlite]
git = "https://github.com/gwenn/rusqlite.git"
branch = "vtab"
features = ["bundled", "vtab", "csvtab", "functions"]
#version = "0.13.0"

[dependencies]
csv = "1.0.0-beta.5"
#regex = "0.2.10"
